--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,12 +1,9 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: SilentEye CI/CD
 
 on:
   push:
     branches:
-      - uday-dev  # Specify the production branch
+      - uday-dev  # Specify the branch 
 
 jobs:
   build:
@@ -16,8 +13,7 @@ jobs:
     strategy:
       matrix:
         node-version: [20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+        
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
@@ -26,5 +22,13 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    # - run: npm run build --if-present
-    # - run: npm test
+    - run: |
+        touch .env
+        echo "${{secrets.PORT}}" >> .env
+        echo "${{secrets.MONGO_URI}}" >> .env
+        echo "${{secrets.SALT_ROUNDS}}" >> .env
+        echo "${{secrets.ACCESS_TOKEN_SECRET}}" >> .env
+        echo "${{secrets.ACCESS_TOKEN_EXPIRY_TIME}}" >> .env
+        echo "${{secrets.REFRESH_TOKEN_SECRET}}" >> .env
+        echo "${{secrets.REFRESH_TOKEN_EXPIRY_TIME}}" >> .env
+    - run: npm start
