env secrete added in yml file

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,7 +3,7 @@ name: SilentEye CI/CD
 on:
   push:
     branches:
-      - uday-dev  # Specify the branch 
+      - uday-dev  # Specify the branch from where you want to run when data will be puch to this brach
 
 jobs:
   build:
@@ -31,4 +31,4 @@ jobs:
         echo "${{secrets.ACCESS_TOKEN_EXPIRY_TIME}}" >> .env
         echo "${{secrets.REFRESH_TOKEN_SECRET}}" >> .env
         echo "${{secrets.REFRESH_TOKEN_EXPIRY_TIME}}" >> .env
-    # - run: npm start
+    - run: npm start
