--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,40 +7,42 @@ on:
 
 jobs:
   build:
+
     runs-on: self-hosted
 
-    strategy:
-      matrix:
-        node-version: [20.x]
-
     steps:
-    - name: Change ownership of the repository directory
-      run: sudo chown -R $(whoami):$(whoami) ${{ github.workspace }}
-      
-    - uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-      
-    - name: Ensure node has execute permissions
-      run: |
-        sudo chmod +x $(which node)
-        sudo chmod +x $(which npm)
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16.x'  # Adjust the Node.js version as per your requirement
 
-    - run: npm ci
-    
-    - run: |
-        touch .env
-        echo "PORT=${{secrets.PORT}}" >> .env
-        echo "MONGO_URI=${{secrets.MONGO_URI}}" >> .env
-        echo "SALT_ROUNDS=${{secrets.SALT_ROUNDS}}" >> .env
-        echo "ACCESS_TOKEN_SECRET=${{secrets.ACCESS_TOKEN_SECRET}}" >> .env
-        echo "ACCESS_TOKEN_EXPIRY_TIME=${{secrets.ACCESS_TOKEN_EXPIRY_TIME}}" >> .env
-        echo "REFRESH_TOKEN_SECRET=${{secrets.REFRESH_TOKEN_SECRET}}" >> .env
-        echo "REFRESH_TOKEN_EXPIRY_TIME=${{secrets.REFRESH_TOKEN_EXPIRY_TIME}}" >> .env
-        
-    # Uncomment the following line if you want to start the application
-    # - run: npm start # if pm2 is set up on server then don't need to run this npm start
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Set Node.js Permissions
+        run: |
+          sudo chown root:root /root/.nvm/versions/node/v16.20.2/bin/node
+          sudo chmod +x /root/.nvm/versions/node/v16.20.2/bin/node
+
+      - name: Set Environment Variables
+        run: |
+          echo "PORT=${{ secrets.PORT }}" >> .env
+          echo "MONGO_URI=${{ secrets.MONGO_URI }}" >> .env
+          echo "SALT_ROUNDS=${{ secrets.SALT_ROUNDS }}" >> .env
+          echo "ACCESS_TOKEN_SECRET=${{ secrets.ACCESS_TOKEN_SECRET }}" >> .env
+          echo "ACCESS_TOKEN_EXPIRY_TIME=${{ secrets.ACCESS_TOKEN_EXPIRY_TIME }}" >> .env
+          echo "REFRESH_TOKEN_SECRET=${{ secrets.REFRESH_TOKEN_SECRET }}" >> .env
+          echo "REFRESH_TOKEN_EXPIRY_TIME=${{ secrets.REFRESH_TOKEN_EXPIRY_TIME }}" >> .env
+
+      - name: Start Node.js Application with pm2
+        run: |
+          pm2 start server.js --name "silenteye-backend"
+          pm2 save
+          pm2 list  # Optional: Check if the application is running correctly
+
+      - name: Show pm2 Process List
+        run: pm2 list
+
