--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,10 +37,7 @@ jobs:
           echo "REFRESH_TOKEN_SECRET=${{ secrets.REFRESH_TOKEN_SECRET }}" >> .env
           echo "REFRESH_TOKEN_EXPIRY_TIME=${{ secrets.REFRESH_TOKEN_EXPIRY_TIME }}" >> .env
 
-      - name: Start Node.js Application with pm2
-        run: |
-          pm2 start silenteye-backend --watch
-  
-      # - name: Show pm2 Process List
-      #   run: pm2 list
+      - name: Start Node.js Application
+        run: npm start
+
 
