--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,13 +29,13 @@ jobs:
 
       - name: Set Environment Variables
         run: |
-          echo "PORT=${{ secrets.PORT }}" >> .env
-          echo "MONGO_URI=${{ secrets.MONGO_URI }}" >> .env
-          echo "SALT_ROUNDS=${{ secrets.SALT_ROUNDS }}" >> .env
-          echo "ACCESS_TOKEN_SECRET=${{ secrets.ACCESS_TOKEN_SECRET }}" >> .env
-          echo "ACCESS_TOKEN_EXPIRY_TIME=${{ secrets.ACCESS_TOKEN_EXPIRY_TIME }}" >> .env
-          echo "REFRESH_TOKEN_SECRET=${{ secrets.REFRESH_TOKEN_SECRET }}" >> .env
-          echo "REFRESH_TOKEN_EXPIRY_TIME=${{ secrets.REFRESH_TOKEN_EXPIRY_TIME }}" >> .env
+          echo "${{ secrets.PORT }}" >> .env
+          echo "${{ secrets.MONGO_URI }}" >> .env
+          echo "${{ secrets.SALT_ROUNDS }}" >> .env
+          echo "${{ secrets.ACCESS_TOKEN_SECRET }}" >> .env
+          echo "${{ secrets.ACCESS_TOKEN_EXPIRY_TIME }}" >> .env
+          echo "${{ secrets.REFRESH_TOKEN_SECRET }}" >> .env
+          echo "${{ secrets.REFRESH_TOKEN_EXPIRY_TIME }}" >> .env
 
       # - name: Start Node.js Application
       #   run: npm start
