--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
+    "mongoose-paginate-v2": "^1.8.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "stripe": "^16.2.0",
