--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,30 +14,27 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16.x'  # Adjust the Node.js version as per your requirement
+      - name: Setup NVM and Node.js
+        run: |
+          curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.2/install.sh | bash
+          export NVM_DIR="$HOME/.nvm"
+          [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+          nvm install 16  # Adjust the Node.js version as per your requirement
+          nvm use 16
+          nvm alias default 16
 
       - name: Install Dependencies
         run: npm ci
 
-      - name: Set Node.js Permissions
-        run: |
-          sudo chown root:root /root/.nvm/versions/node/v16.20.2/bin/node
-          sudo chmod +x /root/.nvm/versions/node/v16.20.2/bin/node
-
       - name: Set Environment Variables
         run: |
-          echo "${{ secrets.PORT }}" >> .env
-          echo "${{ secrets.MONGO_URI }}" >> .env
-          echo "${{ secrets.SALT_ROUNDS }}" >> .env
-          echo "${{ secrets.ACCESS_TOKEN_SECRET }}" >> .env
-          echo "${{ secrets.ACCESS_TOKEN_EXPIRY_TIME }}" >> .env
-          echo "${{ secrets.REFRESH_TOKEN_SECRET }}" >> .env
-          echo "${{ secrets.REFRESH_TOKEN_EXPIRY_TIME }}" >> .env
+          echo "PORT=${{ secrets.PORT }}" >> .env
+          echo "MONGO_URI=${{ secrets.MONGO_URI }}" >> .env
+          echo "SALT_ROUNDS=${{ secrets.SALT_ROUNDS }}" >> .env
+          echo "ACCESS_TOKEN_SECRET=${{ secrets.ACCESS_TOKEN_SECRET }}" >> .env
+          echo "ACCESS_TOKEN_EXPIRY_TIME=${{ secrets.ACCESS_TOKEN_EXPIRY_TIME }}" >> .env
+          echo "REFRESH_TOKEN_SECRET=${{ secrets.REFRESH_TOKEN_SECRET }}" >> .env
+          echo "REFRESH_TOKEN_EXPIRY_TIME=${{ secrets.REFRESH_TOKEN_EXPIRY_TIME }}" >> .env
 
       # - name: Start Node.js Application
       #   run: npm start
-
-
