CICD Updated For adding frontend url

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -41,6 +41,7 @@ jobs:
           echo "${{ secrets.ACCESS_TOKEN_EXPIRY_TIME }}" >> .env
           echo "${{ secrets.REFRESH_TOKEN_SECRET }}" >> .env
           echo "${{ secrets.REFRESH_TOKEN_EXPIRY_TIME }}" >> .env
+          echo "${{ secrets.FRONTEND_URL }}" >> .env
 
       # - name: Start Node.js Application
       #   run: npm start
