--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.4.4",
     "mongoose-paginate-v2": "^1.8.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.4",
     "pdf-lib": "^1.17.1",
     "stripe": "^16.2.0",
